--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +38,42 @@
     transform: rotate(360deg);
   }
 }
+.rofontbotoBold{
+  font-family: RobotoBold , serif;
+}
+
+/* Navbar CSS starts  */
+.navbar{
+  background-color: transparent;
+}
+.navbar-nav , .navbar-brand {
+  font-family: RobotoBold , serif;
+  color: grey;
+
+}
+/* Navbar CSS ends  */
+
+/* Home Page CSS start  */
+.homeMain{
+  height: 100vh;
+  background-image: url(./images/cover.jpg);
+  background-size: cover;
+}
+.title{
+  font-size: 10rem;
+}
+.container{
+  color: rgb(82, 81, 81);
+}
+.button{
+  padding: 1rem 3rem;
+  border: none;
+  background-color: rgb(82, 81, 81);
+  color: white;
+  transition: all 0.5s ease;
+}
+.button:hover{
+  transform: scale(1.1);
+  
+}
+/* Home Page CSS ends  */
