--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@font-face {
+  font-family: 'RobotoBold';
+  src: url(./fonts/RobotoCondensed-Bold.ttf) format('truetype');
+}
