--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,4 @@ code {
   font-family: 'RobotoBold';
   src: url(./fonts/RobotoCondensed-Bold.ttf) format('truetype');
 }
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
