--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body{
 
 /* Navbar CSS starts  */
 .navbar{
-  background-color: transparent;
+  background-color: black;
   position: absolute;
 }
 .navbar-nav , .navbar-brand {
@@ -64,18 +64,20 @@ body{
   background-image: url(./images/cover.jpg);
   background-size: cover;
 }
-.title{
-  font-size: 7rem;
+.homeMain h1{
+  font-size: 6rem;
 }
-.container{
-  color: rgb(82, 81, 81);
+.homeMain p{
+  color: white;
+  font-family: poppins;
 }
 .button{
-  padding: 1rem 3rem;
+  padding: 0.5rem 2rem;
   border: none;
-  background-color: rgb(82, 81, 81);
-  color: white;
+  background-color: white;
+  color: black;
   transition: all 0.5s ease;
+  font-family: poppins;
 }
 .button:hover{
   transform: scale(1.1);
@@ -154,24 +156,26 @@ body{
 }
 .hidden{
   display: none;
+  font-size: 1rem;
 }
 @media (max-width: 1250px) {
   .slider{
     width: 100%;
   }
-  .title{
+  .homeMain h1{
     font-size: 4rem;
   }
   .slider:hover .carouselText{
     transform: translateY(-25%);
-    font-size: 1rem;
+    font-size: 0.5rem;
   }
+  
 }
 /* Projects Page CSS ends  */
 /* Numbers CSS starts  */
 .num{
   border: 2px solid white;
-  margin: 2rem;
+  margin: 1rem;
   height: 15rem;
   border-bottom: 1rem solid white;
   display: flex;
@@ -192,3 +196,103 @@ body{
   font-size: 3rem;
 }
 /* Numbers CSS ends  */
+
+/* About CSS starts  */
+.aboutimg{
+  margin: 0;
+  width: 300px;
+  height: 200px;
+  
+}
+.Abouttext{
+  color: white;
+  text-align: left;
+  font-family: poppins,serif;
+  
+}
+.aboutbox{
+  border: 1px solid white;
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (max-width: 1000px) {
+  .container{
+    width: 100vw;
+  }
+  .aboutbox{
+    display: flex;
+    flex-direction: column;
+  }
+  .aboutReverse{
+    flex-direction: column-reverse;
+  }
+  .Abouttext{
+    margin-top:1rem ;
+  }
+}
+
+
+/* About CSS ends  */
+
+/* Client Page CSS starts  */
+.clientCard{
+  height: 15rem;
+  border: 1px solid white;
+  perspective: 1000;
+  cursor:pointer;
+  padding: 2rem;
+}
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+
+
+/* This container is needed to position the front and back side */
+.clientCardInner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.clientCard:hover .clientCardInner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.clientCardFront, .clientCardBack {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.clientCardFront {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+/* Style the back side */
+.clientCardBack {
+  background-color: #191a1c;
+  color: white;
+  transform: rotateY(180deg);
+  padding: 2rem;
+}
+.clientCardFront img{
+  margin-top: 0.5rem;
+  height: 85%;
+  width: 90%;
+}
+.clientCardBack p{
+  font-family: poppins;
+}
+/* Client page CSS ends  */
