--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,8 @@ code {
   font-family: 'RobotoBold';
   src: url(./fonts/RobotoCondensed-Bold.ttf) format('truetype');
 }
+@font-face {
+  font-family: 'poppins';
+  src: url(./fonts/Poppins-Light.ttf) format('truetype');
+}
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
