--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,9 @@ body{
   color: grey;
 
 }
+.nav-link:hover {
+  border-bottom: 1px solid white;
+}
 /* Navbar CSS ends  */
 
 /* Home Page CSS start  */
@@ -73,10 +76,11 @@ body{
 }
 .button{
   padding: 0.5rem 2rem;
+  font-weight:900;
   border: none;
   background-color: white;
   color: black;
-  transition: all 0.5s ease;
+  transition: all 0.5s ease-in-out;
   font-family: poppins;
 }
 .button:hover{
@@ -169,6 +173,7 @@ body{
     transform: translateY(-25%);
     font-size: 0.5rem;
   }
+  
   
 }
 /* Projects Page CSS ends  */
@@ -296,3 +301,37 @@ body{
   font-family: poppins;
 }
 /* Client page CSS ends  */
+
+/* ContactPage CSS starts  */
+.contactForm{
+  padding: 2rem;
+  border: 1px solid white;
+  width: 75vw;
+}
+.formInputDiv{
+  /* border: 1px solid white; */
+  width: 10rem;
+  height: 4rem;
+}
+input{
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  height: 4rem;
+  border-bottom: 1px solid white;
+  color: white;
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+input:focus{
+  border: none;
+  border-bottom: 1px solid white;
+}
+@media only screen and (max-width: 1000px) {
+  .contactForm{
+    width: 100vw;
+  }
+}
+
+
+/* ContactPage CSS ends  */
